--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@primevue/themes": "^4.1.0",
     "pinia": "^2.2.4",
+    "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.3.1"
   }
 }
