--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.29.0",
+    "prettier": "^3.3.3",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.3.1"
   }
