--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primevue/themes": "^4.1.0",
     "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "vue": "^3.4.29",
